# raxo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/raxo/: __init__.py
src/raxo/core/: __init__.py  base.py
src/raxo/databases/: __init__.py  mysql_connector.py  vertica_connector.py
src/raxo/embeddings/: __init__.py  embedding.py  openai_embedding.py
src/raxo/models/: __init__.py  azure_chat.py  llms.py  openai_chat.py
src/raxo/utils/: __init__.py  base.py  exceptions.py  prompts.py  sql_utils.py
src/raxo/vector/: __init__.py  chroma_db.py  vector.py
