[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "raxo"
version = "0.0.1"
authors = [{name = "Bipul Kumar Singh", email = "admin@raxoweb.com"}]

description = "Generate SQL queries from natural language"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/Raxo-AI/raxo"
"Bug Tracker" = "https://github.com/Raxo-AI/raxo/issues"