[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raxo"
version = "0.0.1"
authors = [
    {name = "Bipul Kumar Singh", email = "bipulsinghkashyap@gmail.com"},
    {name = "Prashant Tomar", email = "admin@raxoweb.com"}
]
description = "Generate SQL queries from natural language"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai >= 1.30.1", "chromadb >= 0.5.0"
]

[project.urls]
"Homepage" = "https://github.com/raxo-ai/raxo"
"Bug Tracker" = "https://github.com/raxo-ai/raxo/issues"

[project.optional-dependencies]
mysql = ["mysql-connector-python >= 8.4.0"]
vertica = ["vertica-python >= 1.3.8"]
