[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "raxo"
authors = [
    {name = "Bipul Kumar Singh", email = "bipulsinghkashyap@gmail.com"},
    {name = "Prashant Tomar", email = "prashanttomar7000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
    "openai >= 1.30.1",
    "chromadb >= 0.5.0"
]

[tool.flit.metadata]
module = "raxo"

[project.urls]
"Homepage" = "https://github.com/raxo-ai/raxo"
"Bug Tracker" = "https://github.com/raxo-ai/raxo/issues"

[project.optional-dependencies]
mysql = ["mysql-connector-python >= 8.4.0"]
vertica = ["vertica-python >= 1.3.8"]
